Use getFirst() and getLast().