@@ -44,7 +44,7 @@ public class UniqueRectangles {
         for (var rectangle : Rectangle.createRectangles(board)) {
             var roof = rectangle.getRoof();
             if (roof.size() == 1) {
-                var roofCell = roof.get(0);
+                var roofCell = roof.getFirst();
                 removals.add(roofCell, rectangle.getCommonCandidates());
             }
         }
@@ -64,8 +64,8 @@ public class UniqueRectangles {
         for (var rectangle : Rectangle.createRectangles(board)) {
             var roof = rectangle.getRoof();
             if (roof.size() == 2) {
-                var roofA = roof.get(0);
-                var roofB = roof.get(1);
+                var roofA = roof.getFirst();
+                var roofB = roof.getLast();
                 if (roofA.candidates().size() == 3 && roofA.candidates().equals(roofB.candidates())) {
                     var additionalCandidates = EnumSet.copyOf(roofA.candidates());
                     additionalCandidates.removeAll(rectangle.getCommonCandidates());
@@ -103,8 +103,8 @@ public class UniqueRectangles {
         for (var rectangle : Rectangle.createRectangles(board)) {
             var roof = rectangle.getRoof();
             if (roof.size() == 2) {
-                var roofA = roof.get(0);
-                var roofB = roof.get(1);
+                var roofA = roof.getFirst();
+                var roofB = roof.getLast();
                 if (roofA.candidates().size() == 3 && roofB.candidates().size() == 3 &&
                         !roofA.candidates().equals(roofB.candidates())
                 ) {
@@ -165,8 +165,8 @@ public class UniqueRectangles {
         for (var rectangle : Rectangle.createRectangles(board)) {
             var roof = rectangle.getRoof();
             if (roof.size() == 2) {
-                var roofA = roof.get(0);
-                var roofB = roof.get(1);
+                var roofA = roof.getFirst();
+                var roofB = roof.getLast();
                 var additionalCandidates = EnumSet.copyOf(roofA.candidates());
                 additionalCandidates.addAll(roofB.candidates());
                 additionalCandidates.removeAll(rectangle.getCommonCandidates());
@@ -245,8 +245,8 @@ public class UniqueRectangles {
             ToIntFunction<Cell> getUnitIndex,
             IntFunction<List<Cell>> getUnit
     ) {
-        var roofA = roof.get(0);
-        var roofB = roof.get(1);
+        var roofA = roof.getFirst();
+        var roofB = roof.getLast();
         var indexA = getUnitIndex.applyAsInt(roofA);
         var indexB = getUnitIndex.applyAsInt(roofB);
         if (indexA == indexB) {
@@ -300,8 +300,8 @@ public class UniqueRectangles {
         for (var rectangle : Rectangle.createRectangles(board)) {
             var floor = rectangle.getFloor();
             if (floor.size() == 2) {
-                var floorA = floor.get(0);
-                var floorB = floor.get(1);
+                var floorA = floor.getFirst();
+                var floorB = floor.getLast();
                 if (floorA.row() != floorB.row() && floorA.column() != floorB.column()) {
                     for (var candidate : rectangle.getCommonCandidates()) {
                         var isStrongLinkCandidate = true;
